# LLMOpsAndAIOpsProjects

./: README.md
AiTravelItinearyPlanner/: elasticsearch.yaml  k8s-deployment.yaml  setup.py
AiTravelItinearyPlanner/src/chains/: itinerary_chain.py
AiTravelItinearyPlanner/src/config/: config.py
AnimeRecommender/: .dockerignore  .gitignore  Dockerfile  constraints.txt  pyproject.toml
AnimeRecommender/app/: app.py
AnimeRecommender/chroma_db/: chroma.sqlite3
AnimeRecommender/src/: recommender.py  vector_store.py
FlipkartProductRecommenderSystem/: .dockerignore  Dockerfile  app.py  flask-deployment.yaml  requirements.txt  setup.py
FlipkartProductRecommenderSystem/flipkart/: config.py  data_ingestion.py
FlipkartProductRecommenderSystem/prometheus/: prometheus-configmap.yaml
StudyBuddyAi/: Dockerfile.jenkins  list_model.py  requirements.txt  setup.py
StudyBuddyAi/src/config/: settings.py
udemy-gcp-serverless-architecture/Gcloud & Bash Basics/: bash-gsutil-cmds.sh  gcloud-bash.sh
